feat: add labels that specify required fields in event creation form

--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -5,56 +5,86 @@
                 <h1 class="secondary-header">Event details</h1>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="event-name">Event name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="event-name">Event name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="event-name" class="text-field" name="event-name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="client-first-name">Client first name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="client-first-name">Client first name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="client-first-name" class="text-field" name="client-first-name" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="client-last-name">Client last name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="client-last-name">Client last name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="client-last-name" class="text-field" name="client-last-name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="event-description">Description</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="event-description">Description</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <textarea id="event-description" class="text-field" name="event-description" rows="6" required></textarea>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="location">Location</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="location">Location</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="location" class="text-field" name="location" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="start-date">Start date</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="start-date">Start date</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="date" id="start-date" class="text-field" name="start-date" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="end-date">End date</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="end-date">End date</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="date" id="end-date" class="text-field" name="end-date" required>
                     </div>
                 </div>
                 <h1 class="secondary-header">Contact person</h1>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-first-name">First name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="contact-first-name">First name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="contact-first-name" class="text-field" name="contact-first-name" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-last-name">Last name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="contact-last-name">Last name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="contact-last-name" class="text-field" name="contact-last-name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="phone-number">Phone number</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="phone-number">Phone number</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="phone-number" class="text-field" name="phone-number" required>
                     </div>
                 </div>
