edit profile/changepw done

--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -1,5 +1,5 @@
 <div class="card">
-    <form class="edit-profile-details" action="/api/edit/profile-description" method="post">
+    <form class="edit-profile-details" action="/edit/edit-profile-details" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <h2 class="secondary-header">Edit profile details</h2>
@@ -59,7 +59,7 @@
     </form>
 </div>
 <div class="card">
-    <form class="edit-profile-details" action="/api/edit/change-password" method="post">
+    <form class="edit-profile-details" action="/edit/changePassword" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <h2 class="secondary-header">Change password</h2>
@@ -79,7 +79,7 @@
                             <span class="error-text">*Required</span>
                         </div>
                         <input type="password" id="newPassword" class="text-field" name="new-password" required>
-                        <label class="text-field-description" id="passLengthCheck" for="new-password">Your new password must contain at least 8 characters and not match your old one.</p>
+                        <label class="text-field-description" id="passLengthCheck" for="new-password">Your new password must contain at least 8 characters and not match your old one.</label>
                     </div>
                 </div>
                 <div class="form-row">
