fix: support more mobile number formats

--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -35,7 +35,7 @@
                             <span class="error-text">*Required</span>
                         </div>
                         <input type="text" id="mobileNumber" class="text-field" name="mobile-number" value="{{user._id}}" required>
-                        <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number with no spaces and no country code.</label>
+                        <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number.</label>
                     </div>
                 </div>
                 <div class="form-row">
