--- a/views/supplierCreate.hbs
+++ b/views/supplierCreate.hbs
@@ -1,4 +1,4 @@
-<div class="form-wizard card">
+<div class="card">
     <form class="form" action="/create/createSupplier" method="post">
         <div class="form-page-container">
             <div class="form-page">
