--- a/views/memberCreate.hbs
+++ b/views/memberCreate.hbs
@@ -1,5 +1,5 @@
-<div class="create-members-wizard card">
-    <form class="create-members-form" action="/create/createMember" method="post">
+<div class="card">
+    <form class="form" action="/create/createMember" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <div class="form-row">
