fix: event details back button goes back to previous page instead of always to event list

--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -45,10 +45,10 @@
 </div>
 
 <div class="page-title-bar">
-    <button class="back-link">
-        <a class="button-wrapper" href="/eventlist">
+    <button class="back-link" id="backLink">
+        <span class="button-wrapper">
             <i class="lni lni-arrow-left"></i>
-        </a>
+        </span>
     </button>
     <h2 class="header">Event Details</h2>
 </div>
