feat: remove members and suppliers

--- a/views/memberDelete.hbs
+++ b/views/memberDelete.hbs
@@ -1,5 +1,5 @@
 <div class="card">
-    <form class="form" action="/api/delete/member" method="post">
+    <form class="form" action="/api/delete/user" method="post">
         <div class="form-page-container">
             <div class="form-page" id="members-page">
                 <div class="grid-container">
