--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -32,9 +32,9 @@
                     <div class="text-field-container">
                         <div class="field-label-container">
                             <label class="field-label" for="mobile-number">Mobile number</label>
-                            <span class="error-text">*Required</span>
+                            <span>Cannot be edited</span>
                         </div>
-                        <input type="text" id="mobileNumber" class="text-field" name="mobile-number" value="{{user._id}}" required>
+                        <input type="text" id="mobileNumber" class="text-field" name="mobile-number" value="{{user._id}}">
                         <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number with no spaces and no country code.</label>
                     </div>
                 </div>
