--- a/public/common/global.css
+++ b/public/common/global.css
@@ -67,6 +67,10 @@ a {
     text-decoration: none;
 }
 
+textarea {
+    resize: none;
+}
+
 .global-sidebar {
     background-color: var(--sidebar-bg);
     color: var(--sidebar-fg);
