--- a/public/common/global.css
+++ b/public/common/global.css
@@ -658,6 +658,18 @@ button.disabled-button:hover .button-wrapper {
     color: var(--border-light);
 }
 
+.disabled-field {
+    background-color: var(--secondary-bg);
+    color: var(--secondary-fg);
+    box-shadow: inset 0 0 0 1px var(--border-light);
+    pointer-events: none;
+    cursor: not-allowed;
+}
+
+.disabled-field:hover {
+
+}
+
 .destructive-button {
     background-color: var(--error-light);
     color: var(--primary-bg);
