--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -34,8 +34,7 @@
                             <label class="field-label" for="mobile-number">Mobile number</label>
                             <span>Cannot be edited</span>
                         </div>
-                        <input type="text" id="mobileNumber" class="text-field" name="mobile-number" value="{{user._id}}">
-                        <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number with no spaces and no country code.</label>
+                        <input type="text" id="mobileNumber" class="disabled-field text-field" name="mobile-number" value="{{user._id}}" disabled>
                     </div>
                 </div>
                 <div class="form-row">
