fix: prevent mobile number from being submitted with form by changing element type to div

--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -34,7 +34,7 @@
                             <label class="field-label" for="mobile-number">Mobile number</label>
                             <span>Cannot be edited</span>
                         </div>
-                        <input type="text" id="mobileNumber" class="disabled-field text-field" name="mobile-number" value="{{user._id}}" disabled>
+                        <div class="disabled-field text-field" disabled>{{user._id}}</div>
                     </div>
                 </div>
                 <div class="form-row">
