fix: bio not displaying

--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -24,7 +24,7 @@
                         <div class="field-label-container">
                             <label class="field-label" for="bio">Bio</label>
                         </div>
-                        <textarea id="bio" class="text-field" name="bio">{{user.bio}}</textarea>
+                        <textarea id="bio" class="text-field" name="bio" rows="6">{{user.bio}}</textarea>
                     </div>
                 </div>
 
