--- a/public/common/global.css
+++ b/public/common/global.css
@@ -1072,6 +1072,7 @@ button.disabled-button:hover .button-wrapper {
     border: none;
     border-radius: var(--input-field-radius);
     box-shadow: inset 0 0 0 1px var(--border-dark);
+    font-family: var(--main-font);
 }
 
 .disabled-link {
