--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -56,9 +56,15 @@
         <i class="lni lni-arrow-left"></i>
     </a>
     {{/if}}
+    {{#if (eq pageCount 1)}}
+    <form class="pagination-form" method="get">
+        <input type="text" min="1" max="{{subtract pageCount 1}}" name="page" class="disabled-field pagination-form-input" id="currentPage" size="2" value="{{currentPageNumber}}">
+    </form>
+    {{else}}
     <form class="pagination-form" method="get">
         <input type="number" min="1" max="{{subtract pageCount 1}}" name="page" class="pagination-form-input" id="currentPage" size="2" value="{{currentPageNumber}}">
     </form>
+    {{/if}}
     {{#if (lt currentPageNumber (subtract pageCount 1))}}
     <a href="/eventList?page={{add currentPageNumber 1}}" class="pagination-control" id="pagination-next-button">
         <i class="lni lni-arrow-right"></i>
