--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -1,4 +1,7 @@
-<h1 class="header"> Notifications </h1>
+<div class="page-title-bar">
+    <i class="lni lni-bell-1 title-icon"></i>
+    <h1 class="header"> Notifications </h1>
+</div>
 <div class="top-page-bar">
     <form role="search" class="search-bar" id="eventSearchForm">
             <button type="submit"><i class="lni lni-search-1"></i></button>
