pfp uploads and shows in the sidebar

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -111,7 +111,7 @@
                     <li class="nav-link accounts-page-link" id="active-link">
                         <div class="link-name">
                             <div class="profile-picture image">
-                                    <img src="{{user.profilePic}}" alt="Profile Picture" />
+                                    <img src="/edit/pfp" alt="Profile Picture" />
                             </div>
                             <div class="profile-info">
                                 <p class="username">{{user.firstName}} {{user.lastName}}</p>
@@ -126,7 +126,7 @@
                     <li class="nav-link accounts-page-link">
                         <div class="link-name">
                             <div class="profile-picture image">
-                                    <img src="{{user.profilePic}}" alt="Profile Picture" />
+                                    <img src="/edit/pfp" alt="Profile Picture" />
                             </div>
                             <div class="profile-info">
                                 <p class="username">{{user.firstName}} {{user.lastName}}</p>
