--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -58,7 +58,7 @@
     </form>
 </div>
 <div class="card">
-    <form class="edit-profile-details" action="/api/edit/change-profile-picture" method="post">
+    <form class="edit-profile-details" action="/edit/change-profile-picture" method="post" enctype="multipart/form-data">
         <div class="form-page-container">
             <div class="form-page">
                 <h2 class="secondary-header">Change profile picture</h2>
