--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,8 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/common/lineicons/lineicons.css">
     <script src="/common/javascript/sidebar.js"></script>
+    <script src="/common/javascript/error.js"></script>
 </head>
 <body>
+    {{#if error}}
+        <div class="error-container">
+            {{>error}}
+        </div>
+    {{/if}}
     {{>sidebar}}
     <div class="main-content container">
         {{{body}}}
