--- a/views/partials/error.hbs
+++ b/views/partials/error.hbs
@@ -1,5 +1,5 @@
 <div class="error-message">
     <h1>!</h1>
     <span><b>Error</b></span>
-    <span>{{error}}</span>
+    <span id="errorDescription">{{error}}</span>
 </div>
