feat: add suppliers section to team page

--- a/views/teamList.hbs
+++ b/views/teamList.hbs
@@ -66,5 +66,14 @@
                 {{/each}}
             </div>
         </section>
+
+        <section class="team-member-types">
+            <h2 class="secondary-header">Suppliers</h2>
+            <div class="members-box">
+                {{#each suppliers}}
+                    {{>supplier this}}
+                {{/each}}
+            </div>
+        </section>
     </div>
 </section>
